@@ -1,3 +1,3 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/">	
-	<Include file="LibTourist-3.0\lib.xml"/>
+	<!-- <Include file="LibTourist-3.0\lib.xml"/> -->
 </Ui>
