@@ -250,21 +250,24 @@ function LP:AddOptions()
 								name = LEVEL_RANGE,
 								desc = L["Enable/Disable level range on Tooltip."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,		
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,		
 							},
 							fish = {
 								order = 3,
 								name = L["Area Fishing level"],
 								desc = L["Enable/Disable fishing level on the area."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,				
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,				
 							},
 							petlevel = {
 								order = 4,
 								name = L["Battle Pet level"],
 								desc = L["Enable/Disable battle pet level on the area."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,				
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,				
 							},
 							spacer2 = {
 								order = 5,
@@ -278,28 +281,32 @@ function LP:AddOptions()
 								desc = L["Enable/Disable recommended zones on Tooltip."],
 								type = 'toggle',
 								width = "full",
-								disabled = function() return not E.db.locplus.tt end,		
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,		
 							},
 							ttinst = {
 								order = 7,
 								name = L["Zone Dungeons"],
 								desc = L["Enable/Disable dungeons in the zone, on Tooltip."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,			
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,			
 							},
 							ttrecinst = {
 								order = 8,
 								name = L["Recommended Dungeons"],
 								desc = L["Enable/Disable recommended dungeons on Tooltip."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,			
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,			
 							},
 							ttcoords = {
 								order = 9,
 								name = L["with Entrance Coords"],
 								desc = L["Enable/Disable the coords for area dungeons and recommended dungeon entrances, on Tooltip."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt or not E.db.locplus.ttrecinst end,			
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt or not E.db.locplus.ttrecinst end,			
 							},
 							spacer3 = {
 								order = 10,
@@ -344,14 +351,16 @@ function LP:AddOptions()
 								name = L["Hide Raid"],
 								desc = L["Show/Hide raids on recommended dungeons."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,
 							},
 							tthidepvp = {
 								order = 2,
 								name = L["Hide PvP"],
 								desc = L["Show/Hide PvP zones, Arenas and BGs on recommended dungeons and zones."],
 								type = 'toggle',
-								disabled = function() return not E.db.locplus.tt end,
+								disabled = true,
+								--disabled = function() return not E.db.locplus.tt end,
 							},
 						},
 					},
