@@ -1,6 +1,6 @@
 local E, L, V, P, G = unpack(ElvUI);
 local LP = E:GetModule('LocationPlus')
-local T = LibStub('LibTourist-3.0');
+--local T = LibStub('LibTourist-3.0');
 
 local format, tonumber, pairs = string.format, tonumber, pairs
 
@@ -328,8 +328,9 @@ end
 local capRank = 800
 
 function LP:UpdateTooltip()
-	local mapID = GetCurrentMapAreaID()
-	local zoneText = T:GetMapNameByIDAlt(mapID) or UNKNOWN;
+	--local mapID = GetCurrentMapAreaID()
+	--local zoneText = T:GetMapNameByIDAlt(mapID) or UNKNOWN;
+	local zoneText = GetRealZoneText() or UNKNOWN;
 	local curPos = (zoneText.." ") or "";
 
 	GameTooltip:ClearLines()
@@ -338,7 +339,7 @@ function LP:UpdateTooltip()
 	GameTooltip:AddDoubleLine(L["Zone : "], zoneText, 1, 1, 1, selectioncolor)
 
 	-- Continent
-	GameTooltip:AddDoubleLine(CONTINENT.." : ", T:GetContinent(zoneText), 1, 1, 1, selectioncolor)
+	--GameTooltip:AddDoubleLine(CONTINENT.." : ", T:GetContinent(zoneText), 1, 1, 1, selectioncolor)
 
 	-- Home
 	GameTooltip:AddDoubleLine(HOME.." :", GetBindLocation(), 1, 1, 1, 0.41, 0.8, 0.94)
@@ -348,31 +349,31 @@ function LP:UpdateTooltip()
 		GameTooltip:AddDoubleLine(STATUS.." :", LP:GetStatus(false), 1, 1, 1)
 	end
 
-    -- Zone level range
+    --[[ Zone level range
 	if E.db.locplus.ttlvl then
 		local checklvl = LP:GetLevelRange(zoneText, true)
 		if checklvl ~= "" then
 			GameTooltip:AddDoubleLine(LEVEL_RANGE.." : ", checklvl, 1, 1, 1)
 		end
-	end
+	end]]
 
-	-- Fishing
+	--[[ Fishing
 	if E.db.locplus.fish then
 		local checkfish = LP:GetFishingLvl(true, true)
 		if checkfish ~= "" then
 			GameTooltip:AddDoubleLine(PROFESSIONS_FISHING.." : ", checkfish, 1, 1, 1)
 		end
-	end
+	end]]
 
-	-- Battle Pet Levels
+	--[[ Battle Pet Levels
 	if E.db.locplus.petlevel then
 		local checkbpet = LP:GetBattlePetLvl(zoneText, true)
 		if checkbpet ~= "" then
 			GameTooltip:AddDoubleLine(L["Battle Pet level"].. " :", checkbpet, 1, 1, 1, selectioncolor)
 		end
-	end
+	end]]
 
-	-- Recommended zones
+	--[[ Recommended zones
 	if E.db.locplus.ttreczones then
 		GameTooltip:AddLine(" ")
 		GameTooltip:AddLine(L["Recommended Zones :"], selectioncolor)
@@ -380,9 +381,9 @@ function LP:UpdateTooltip()
 		for zone in T:IterateRecommendedZones() do
 			GetRecomZones(zone);
 		end		
-	end
+	end]]
 
-	-- Instances in the zone
+	--[[ Instances in the zone
 	if E.db.locplus.ttinst and T:DoesZoneHaveInstances(zoneText) then 
 		GameTooltip:AddLine(" ")
 		GameTooltip:AddLine(curPos..DUNGEONS.." :", selectioncolor)
@@ -390,9 +391,9 @@ function LP:UpdateTooltip()
 		for dungeon in T:IterateZoneInstances(zoneText) do
 			GetZoneDungeons(dungeon);
 		end	
-	end
+	end]]
 
-	-- Recommended Instances
+	--[[ Recommended Instances
 	local level = UnitLevel('player')
 	if E.db.locplus.ttrecinst and T:HasRecommendedInstances() and level >= 15 then
 		GameTooltip:AddLine(" ")
@@ -401,7 +402,7 @@ function LP:UpdateTooltip()
 		for dungeon in T:IterateRecommendedInstances() do
 			GetRecomDungeons(dungeon);
 		end
-	end
+	end]]
 
 	-- Currency
 	local numEntries = GetCurrencyListSize() -- Check for entries to disable the tooltip title when no currency
